# wiki-util

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .stylua.toml  LICENSE  README.md  config-template.sh  csv-to-pokemoves.lua  do-things.sh  dumper.lua  make-pokes.sh  operations  pyproject.toml  recomp-breed.lua  recomp-preevo.lua  source-modules.lua  source-modules.lua.base
Haskell/: Main.hi  SizeInfo.hi  SizeInfo.hs  sizeInfo
bash/: check-size.sh  delete-by-type.sh  download-multiple.sh  download-ndex-range.sh  download-range.sh  dreamForms.sh  file-type.sh  fixes.sh  get-content.sh  get-wiki-file.sh  getWikiFile.sh  halve-images.sh  learnlists-subpage.sh  make-dict.sh  mass-upload.sh  models-download.sh  models-redirects.sh  models-refresh.sh  models-rename-copy.sh  models-rename.sh  models-renameMove.sh  models-resize.sh  models-size-info.sh  models-static.sh  null-edit.sh  resize.sh  run.sh  size-info.sh  sprGamesRedirects.sh  sprites-source.list  sprites-source.sh  transparentBackground.sh  trim-and-shrink.sh  trim-images.sh  trimImage.sh  update-css.sh  uploadNdexRange.sh
bot/: .tool-versions  add-lpa-learnlist-subpages.py  altepcodes.py  deploy-lua-module.py  devbox.json  fix-rdex.py  fixes_data.py  get-evs.py  imagedownload.py  last-week-pages.py  mergeforms-movelist.py  move-pages.py  move-sequential-pages.py  move-xy-episodes.py  remove-movelist-old-params.py  replacelearnlists.py  sections.py  update-learnlist-subpages.py  update-sign.py  updatemovelist.py  use-learnset-subpages.py  user-fixes.py
config-templates/: config.lua  config.sh
(+377 files in other folders)
