[project]
name = "pcw-utils"
version = "0.1.0"
description = "Pokémon Central Wiki utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.2.1",
    "pywikibot>=9.6.1",
]

# While there are definitely more powerful build backends out there, we only
# need one to add our `utils` directory to the sys.path. setuptools is usually
# installed by default and it gets the job done
[build-system]
requires = [
    "setuptools >= 77.0.3"
]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
]

[tool.setuptools.packages.find]
include = [
    "utils*",
]

[tool.isort]
profile = "black"
